--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   linear_timer: ^2.0.0
   equatable: ^2.0.5
+  camera: ^0.10.5+5
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
